tests/compError/missingField.ucl
// compError
// error: struct instance is missing field 'missingField'
// tests/compError/missingField.ucl:13 -> struct instance here
// tests/compError/missingField.ucl:8 -> field originally defined here

const Test = struct {
	field a: Number;
	field missingField: Number;
};

var test = Test {
	.a = 100;
};